[gd_scene load_steps=4 format=3 uid="uid://ckm47vxf6ih7x"]

[ext_resource type="Script" path="res://dot/dot.gd" id="1_fomtl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_05we5"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_ol8c3"]
radius = 100.0

[node name="Dot" type="CharacterBody2D"]
script = ExtResource("1_fomtl")

[node name="DotBody" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_05we5")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_ol8c3")

[connection signal="area_entered" from="DetectionArea" to="." method="_on_detection_area_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="_on_detection_area_area_exited"]
